# cub-scout

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.circleci/: config.yml
.githooks/: pre-push
.github/workflows/: ci.yml  daily-pipeline.yml
docs/: GAP_ANALYSIS.md  SPRINT_8_PLAN.md  SPRINT_PLAN.md
docs/plans/: 2025-02-02-phase-6a-foundation.md  2025-02-02-phase-6b-player-mart.md  2025-02-02-phase-6c-enhanced-matching.md  2025-02-02-unified-player-architecture-design.md  2026-01-31-cfb-scout-phase2-implementation.md  2026-01-31-cfb-scout-phase3-implementation.md  2026-01-31-cfb-scout-phase4-implementation.md  2026-01-31-cfb-scout-phase5-implementation.md
scripts/: backfill_embeddings.py  run_api.py  run_pipeline.py
src/: config.py
src/api/: main.py  models.py
src/clients/: anthropic.py  pff.py
src/crawlers/: base.py
src/crawlers/articles/: __init__.py  base.py  on3_articles.py  two47_articles.py
src/crawlers/recruiting/: two47.py
src/processing/: aggregation.py  alerting.py  comparison.py  draft.py  embeddings.py  entity_extraction.py  entity_linking.py  grading.py  pff_pipeline.py  pipeline.py  player_matching.py  summarizer.py  transfer_portal.py  trends.py
src/storage/: db.py  schema.sql
src/storage/migrations/: 001_enable_pgvector.sql  002_player_embeddings.sql  003_pending_links.sql  004_player_mart.sql  005_player_mart_indexes.sql  (+1 more)
tests/: conftest.py  test_aggregation.py  test_alerting.py  test_alerts.py  test_api.py  test_api_mutations.py  test_article_crawler_base.py  test_comparison.py  test_db.py  test_draft.py  test_embeddings.py  test_entity_extraction.py  test_entity_linking.py  test_grading.py  test_on3_articles.py  test_pff_client.py  test_pff_pipeline.py  test_player_matching.py  test_player_upsert.py  test_portal_processing.py  test_summarizer.py  test_timeline.py  test_transfer_portal.py  test_trends.py  test_two47_articles.py  test_two47_crawler.py  test_watchlist.py
