[project]
name = "cfb-scout"
version = "0.1.0"
description = "CFB scouting intelligence agent"
requires-python = ">=3.12"
dependencies = [
    "praw>=7.7.0",
    "anthropic>=0.18.0",
    "psycopg[binary]>=3.2.0",
    "psycopg_pool>=3.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "rapidfuzz>=3.6.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "numpy>=1.26.0",
    "openai>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
fail_under = 50
